// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/BasicButton render diff size btn 1`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
    type="button"
  >
    <span>
      默认大小主题按钮
    </span>
  </button>
</div>
`;

exports[`lib/BasicButton render diff size btn 2`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
    type="button"
  >
    <span>
      中型默认主题按钮
    </span>
  </button>
</div>
`;

exports[`lib/BasicButton render diff size btn 3`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-lg basic-button-wrapper css-geipcv"
    type="button"
  >
    <span>
      大型默认主题按钮
    </span>
  </button>
</div>
`;

exports[`lib/BasicButton render diff size btn 4`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
    type="button"
  >
    <span>
      小型默认主题按钮
    </span>
  </button>
</div>
`;

exports[`lib/BasicButton render diff style btn 1`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
    type="button"
  >
    <span>
      默认主题按钮
    </span>
  </button>
</div>
`;

exports[`lib/BasicButton render diff style btn 2`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
    type="button"
  >
    <span>
      默认主题按钮
    </span>
  </button>
</div>
`;

exports[`lib/BasicButton render diff style btn 3`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-dashed basic-button-wrapper css-geipcv"
    type="button"
  >
    <span>
      虚线默认主题按钮
    </span>
  </button>
</div>
`;

exports[`lib/BasicButton render diff style btn 4`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-dangerous basic-button-wrapper css-geipcv"
    type="button"
  >
    <span>
      危险按钮
    </span>
  </button>
</div>
`;

exports[`lib/BasicButton render diff style btn 5`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-icon-only btn-icon-no-border basic-button-wrapper css-geipcv"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      这是一个假装的图标
    </span>
  </button>
</div>
`;
